--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,18 +11,10 @@ jobs:
         uses: DevExpress/testcafe-action@latest
         with:
           args: "chrome tests"
-                 
-      - name: Upload test results
-        if: success() || failure()
-        uses: actions/upload-artifact@v2
+      - name: Test Report
+        uses: dorny/test-reporter@v1
+        if: success() || failure()    # run this step even if previous step failed
         with:
-          name: test-results
-          path: __tests__/__results__/*.xml
-
-      - name: Create test report
-        uses: ./
-        if: success() || failure()
-        with:
-          name: JEST Tests
-          path: __tests__/__results__/*.xml
-          reporter: jest-junit
+          name: JEST Tests            # Name of the check run which will be created
+          path: reports/jest-*.xml    # Path to test results
+          reporter: jest-junit   
