--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -25,4 +25,4 @@ jobs:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
        uses: pullreminders/slack-action@master
        with:
-        args: '{\"channel\":\"C03R342B685\",\"text\":\"Hello world\"}'
+        args: '{\"channel\":\"D03R3ATDYVB\",\"text\":\"Hello world\"}'
